--- a/css.css
+++ b/css.css
@@ -22,3 +22,18 @@ body {
     color: #0090d9;
     text-align: justify;
 }
+#header {
+    width: 100%;
+    height: 180px;
+    background-image: url("images/header.jpg");
+    background-size: cover;
+    background-position: center;
+    border-top: 3px solid #fff;
+    border-bottom: 3px solid #fff;
+}
+
+#container {
+    display: flex;
+    align-items: flex-start;
+    padding:0;
+}
