--- a/css.css
+++ b/css.css
@@ -37,3 +37,42 @@ body {
     align-items: flex-start;
     padding:0;
 }
+
+#navigation {
+    width: 160px;
+    border: 1px solid #ccc;
+    padding: 8px;
+    font-size: 13px;
+    color: #0090d9;
+    background-color: #fff;
+    margin: 0; 
+}
+
+#navigation .nav-title {
+    width: 160px;
+    border: 1px solid #ccc;
+    padding: 8px;
+    font-size: 13px;
+    background-color: #fff;
+    margin: 0;  
+}
+#navigation span {
+    display: block;
+    font-weight: bold;
+    color: #0090d9;
+    text-align: right;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 3px;
+    margin-bottom: 5px;
+}  
+#navigation a {
+    display: block;
+    color: #333;
+    text-decoration: none;
+    margin: 5px 0;
+    padding-left: 5px;
+}
+
+#navigation a:hover {
+    color: #0090d9;
+}
