--- a/css.css
+++ b/css.css
@@ -76,3 +76,31 @@ body {
 #navigation a:hover {
     color: #0090d9;
 }
+
+#content {
+    flex: 1;
+    padding: 0 20px;
+    line-height: 1.5;
+    font-size: 14px;
+    border-bottom: 1px solid #02a8fc;
+    margin-top: 20px;
+}
+
+#content h1 {
+    color: #0090d9;
+    text-align: right; 
+    margin-right: 100px; 
+    font-size: 18px;
+    padding: 4px 0;
+
+}
+
+
+#content a {
+    color: #0090d9;
+    text-decoration: none;
+}
+
+#content a:hover {
+    text-decoration: underline;
+}
