--- a/css.css
+++ b/css.css
@@ -104,3 +104,12 @@ body {
 #content a:hover {
     text-decoration: underline;
 }
+
+#footer {
+    text-align: center;
+    font-size: 12px;
+    color: #999;
+    border-top: 1px dotted #ccc;
+    padding-top: 10px;
+    margin-top: 20px;
+}
