--- a/css.css
+++ b/css.css
@@ -61,7 +61,7 @@ body {
     font-weight: bold;
     color: #0090d9;
     text-align: right;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px dotted #ccc;
     padding-bottom: 3px;
     margin-bottom: 5px;
 }  
@@ -82,7 +82,6 @@ body {
     padding: 0 20px;
     line-height: 1.5;
     font-size: 14px;
-    border-bottom: 1px solid #02a8fc;
     margin-top: 20px;
 }
 
