--- a/css.css
+++ b/css.css
@@ -61,7 +61,7 @@ body {
     font-weight: bold;
     color: #0090d9;
     text-align: right;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px dotted #ccc;
     padding-bottom: 3px;
     margin-bottom: 5px;
 }  
@@ -114,4 +114,3 @@ body {
     margin-top: 20px;
 }
 
-hj
